k8s/service.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-feature-deploys-service
  namespace: __K8S_NAMESPACE__
  labels:
    app: k8s-feature-deploys
spec:
  type: ClusterIP
  selector:
    app: k8s-feature-deploys
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
